# nprocess

./: .dockerignore  .editorconfig  .env.cloudsql  .env.example  .firebaserc  .gcloudignore  .github-setup.sh  .gitignore  .gitignore.cleanup  .pre-commit-config.yaml  ADMIN_DASHBOARD_ANALYSIS.md  API_INTEGRATION_GUIDE.md  AUTHENTICATION.md  BACKUP_INFO.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CORE_API_MAPPING.md  DEPLOY.md  DEPLOYMENT.md  DEPLOY_STATUS.md  Dockerfile  ENTERPRISE_IMPLEMENTATION.md  FRONTEND_PROPOSAL.md  GOOGLE_AI_STACK.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION.md  ISSUES_REPORT.md  LICENSE  LIMPEZA_COMPLETA.md  Makefile  PROMPTS_EXAMPLES.md  PR_BODY.md  PR_DESCRIPTION.md  RBAC_ROLES.md  README.md  REPOSITORY_AUDIT_REPORT.md  RUN_WITHOUT_AI.md  SECURITY.md  (+24 more)
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/routers/: __init__.py  compliance.py  documents.py  health.py  knowledge.py  mcp.py  process.py  system.py
backend/app/schemas/: __init__.py  auth.py  compliance.py  documents.py  knowledge.py  process.py  system.py
backend/app/services/ai/: __init__.py  embedding.py  gemini.py
backend/app/services/compliance/: __init__.py  audit.py
backend/app/services/documents/: __init__.py  generator.py
backend/app/services/ingestion/: __init__.py  chunking.py  (+1 more)
backend/scripts/: admin_tools.py  ingest_kb.py  ingest_sample_data.py  set_super_admin.py  test_api.py  verify_mission1.py  verify_mission4.py
(+706 files in other folders)
